--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <queries>
+        <package android:name="com.whatsapp"/>
+        <package android:name="com.whatsapp.w4b"/>
+        <package android:name="com.gbwhatsapp"/>
+    </queries>
 
     <application
         android:allowBackup="true"
@@ -8,25 +13,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OnlineShop"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".scenes.payment.PaymentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".scenes.detailItems.DetailItemActivity"
+            android:exported="false" />
         <activity
             android:name=".scenes.splashscreen.SplashScreen"
             android:exported="true"
             android:label="@string/title_activity_splash_screen"
-            android:theme="@style/Theme.Design.Light.NoActionBar" >
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".scenes.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main" />
-
     </application>
 
 </manifest>
