--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         <activity
             android:name=".scenes.splashscreen.SplashScreen"
             android:exported="true"
-            android:label="@string/title_activity_splash_screen"
-            android:theme="@style/AppTheme">
+            android:label="@string/title_activity_splash_screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
