--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <queries>
-        <package android:name="com.whatsapp"/>
-        <package android:name="com.whatsapp.w4b"/>
-        <package android:name="com.gbwhatsapp"/>
+        <package android:name="com.whatsapp" />
+        <package android:name="com.whatsapp.w4b" />
+        <package android:name="com.gbwhatsapp" />
     </queries>
 
     <application
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".scenes.editProfile.EditProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".scenes.payment.PaymentActivity"
             android:exported="false" />
