--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo_apps"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_logo_apps"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
@@ -27,19 +27,14 @@
             android:name=".scenes.detailItems.DetailItemActivity"
             android:exported="false" />
         <activity
-            android:name=".scenes.splashscreen.SplashScreen"
+            android:name=".scenes.MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_splash_screen">
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".scenes.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main" />
     </application>
 
 </manifest>
